[package]
name = "voyage_engine"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.15.0", features = ["dynamic_linking"] }
avian3d = { version = "0.2.0" }
bevy_turborand = "0.10.0"
bevy_kira_audio = { version = "0.21.0", features = ["mp3", "wav"] }
bevy_vector_shapes = "0.9.3"
#bevy_blur_regions = "0.5.0"
#bevy_dev_console = { git = "https://github.com/doonv/bevy_dev_console.git", version = "0.1.0" }
noise = "0.9.0"
transvoxel = "1.1.0"
num-traits = "0.2.19"
num-integer = "0.1.46"
acacia = "0.2.0"
chrono = "0.4.39"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[features]
use-debug-plugin = []
