[package]
name = "voyage_engine"
version = "0.2.0"
edition = "2021"

[dependencies]
bevy = { version = "0.16.0", features = ["dynamic_linking", "file_watcher", "embedded_watcher"] }
avian3d = { version = "0.3" }
bevy_turborand = "0.11.0"
bevy_kira_audio = { version = "0.23.0", features = ["mp3", "wav"] }
noise = "0.9.0"
transvoxel = "1.2.0"
num-traits = "0.2.19"
num-integer = "0.1.46"
chrono = "0.4.41"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[features]
use-debug-plugin = []
