[package]
name = "voyage_engine"
version = "0.2.0"
edition = "2021"

[dependencies]
bevy = { version = "0.16.0", features = ["dynamic_linking", "file_watcher", "embedded_watcher"] }
bevy_kira_audio = { version = "0.23.0", features = ["wav"] }
avian3d = { version = "0.3" }
bevy_turborand = "0.11.0"
transvoxel = "1.2.0"
chrono = "0.4.41"
noise = "0.9.0"
bevy_blockout = "0.1.0"
bevy_atmosphere = "0.13.0"
bevy-panic-handler = "5.0.0"
bevy_infinite_grid = "0.15.0"
bevy_transform_interpolation = "0.2.0"
bevy_sun_move = "0.1.0"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[features]
use-debug-plugin = []
